# lily-jane-snake

./: .gitignore  CLAUDE.md  README.md  config.py  graphics.py  icon.py  install.sh  main.py  pyproject.toml  snake_core.py  sound_fx.py
.claude/: settings.json
.scratch/lily-jane-snake/: spec.md
.scratch/lily-jane-snake/issues/: 01-walking-snake.md  02-fruit-growth-counter.md  03-sound-effects-mute.md  04-welcome-screen-fullscreen.md  05-death-toggle.md  06-installer-desktop-launcher.md
docs/agents/: domain.md
tests/: test_core.py
